[package]
name = "r2d2redisgraph"
version = "0.3.0"
authors = ["Varun Deshpande <varun.vd51@gmail.com>"]
keywords = ["redis", "database", "graph-database"]
description = "A Rust client for RedisGraph."
homepage = "https://gitlab.com/flyweightgroup/r2d2-redis-graph.git"
repository = "https://gitlab.com/flyweightgroup/r2d2-redis-graph.git"
license = "MIT"
readme = "README.md"
edition = "2018"

[dependencies]
redis = "0.20.0"
num = "0.2.1"
num-derive = "0.3.0"
num-traits = "0.2.11"
r2d2_redis = "0.14.0"
chrono = "0.4"

[dev-dependencies]
serial_test = "0.4.0"
maplit = "1.0.2"
chrono = "0.4"
